# swagger_server/models/metric_res.py
@@ -6,6 +6,7 @@ from datetime import date, datetime  # noqa: F401
 from typing import List, Dict  # noqa: F401
 
 from swagger_server.models.base_model_ import Model
+from swagger_server.models.metric_res_inner import MetricResInner  # noqa: F401,E501
 from swagger_server import util
 
 
@@ -15,46 +16,15 @@ class MetricRes(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, operation_id: str=None, name: str=None, value: int=None, unit: str=None, timestamp: datetime=None, appendix: str=None):  # noqa: E501
+    def __init__(self):  # noqa: E501
         """MetricRes - a model defined in Swagger
 
-        :param operation_id: The operation_id of this MetricRes.  # noqa: E501
-        :type operation_id: str
-        :param name: The name of this MetricRes.  # noqa: E501
-        :type name: str
-        :param value: The value of this MetricRes.  # noqa: E501
-        :type value: int
-        :param unit: The unit of this MetricRes.  # noqa: E501
-        :type unit: str
-        :param timestamp: The timestamp of this MetricRes.  # noqa: E501
-        :type timestamp: datetime
-        :param appendix: The appendix of this MetricRes.  # noqa: E501
-        :type appendix: str
         """
         self.swagger_types = {
-            'operation_id': str,
-            'name': str,
-            'value': int,
-            'unit': str,
-            'timestamp': datetime,
-            'appendix': str
         }
 
         self.attribute_map = {
-            'operation_id': 'operationID',
-            'name': 'name',
-            'value': 'value',
-            'unit': 'unit',
-            'timestamp': 'timestamp',
-            'appendix': 'appendix'
         }
-
-        self._operation_id = operation_id
-        self._name = name
-        self._value = value
-        self._unit = unit
-        self._timestamp = timestamp
-        self._appendix = appendix
 
     @classmethod
     def from_dict(cls, dikt) -> 'MetricRes':
@@ -66,129 +36,3 @@ class MetricRes(Model):
         :rtype: MetricRes
         """
         return util.deserialize_model(dikt, cls)
-
-    @property
-    def operation_id(self) -> str:
-        """Gets the operation_id of this MetricRes.
-
-
-        :return: The operation_id of this MetricRes.
-        :rtype: str
-        """
-        return self._operation_id
-
-    @operation_id.setter
-    def operation_id(self, operation_id: str):
-        """Sets the operation_id of this MetricRes.
-
-
-        :param operation_id: The operation_id of this MetricRes.
-        :type operation_id: str
-        """
-
-        self._operation_id = operation_id
-
-    @property
-    def name(self) -> str:
-        """Gets the name of this MetricRes.
-
-
-        :return: The name of this MetricRes.
-        :rtype: str
-        """
-        return self._name
-
-    @name.setter
-    def name(self, name: str):
-        """Sets the name of this MetricRes.
-
-
-        :param name: The name of this MetricRes.
-        :type name: str
-        """
-
-        self._name = name
-
-    @property
-    def value(self) -> int:
-        """Gets the value of this MetricRes.
-
-
-        :return: The value of this MetricRes.
-        :rtype: int
-        """
-        return self._value
-
-    @value.setter
-    def value(self, value: int):
-        """Sets the value of this MetricRes.
-
-
-        :param value: The value of this MetricRes.
-        :type value: int
-        """
-
-        self._value = value
-
-    @property
-    def unit(self) -> str:
-        """Gets the unit of this MetricRes.
-
-
-        :return: The unit of this MetricRes.
-        :rtype: str
-        """
-        return self._unit
-
-    @unit.setter
-    def unit(self, unit: str):
-        """Sets the unit of this MetricRes.
-
-
-        :param unit: The unit of this MetricRes.
-        :type unit: str
-        """
-
-        self._unit = unit
-
-    @property
-    def timestamp(self) -> datetime:
-        """Gets the timestamp of this MetricRes.
-
-
-        :return: The timestamp of this MetricRes.
-        :rtype: datetime
-        """
-        return self._timestamp
-
-    @timestamp.setter
-    def timestamp(self, timestamp: datetime):
-        """Sets the timestamp of this MetricRes.
-
-
-        :param timestamp: The timestamp of this MetricRes.
-        :type timestamp: datetime
-        """
-
-        self._timestamp = timestamp
-
-    @property
-    def appendix(self) -> str:
-        """Gets the appendix of this MetricRes.
-
-
-        :return: The appendix of this MetricRes.
-        :rtype: str
-        """
-        return self._appendix
-
-    @appendix.setter
-    def appendix(self, appendix: str):
-        """Sets the appendix of this MetricRes.
-
-
-        :param appendix: The appendix of this MetricRes.
-        :type appendix: str
-        """
-
-        self._appendix = appendix
